force-app/main/default/objects/IFv2_RequestExtension3__c/IFv2_RequestExtension3__c.object-meta.xml
<CustomObject>
    <description>Hold the requests of the NALA region.</description>
    <label>Request Extension 3 - NALA</label>
    <nameField>
        <label>Request Extension 3 - NALA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Extension 3 - NALA</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>