force-app/main/default/objects/IFv2_RequestExtension3__c/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>