force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>