force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Advantage_of_Proposed_Method__c.field-meta.xml
<CustomField>
    <fullName>Advantage_of_Proposed_Method__c</fullName>
    <description>used in workflow employee suggestion scheme</description>
    <label>Advantage of Proposed Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>