force-app/main/default/objects/IFv2_RequestExtension3__c/fields/AmountCost__c.field-meta.xml
<CustomField>
    <fullName>AmountCost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>