force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001 - Banco do Brasil</fullName>
            </value>
            <value>
                <fullName>104 - CEF</fullName>
            </value>
            <value>
                <fullName>237 - Bradesco</fullName>
            </value>
            <value>
                <fullName>341 - Itaú</fullName>
            </value>
            <value>
                <fullName>399 - HSBC</fullName>
            </value>
            <value>
                <fullName>409 - Unibanco</fullName>
            </value>
            <value>
                <fullName>477 - Citibank</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>