force-app/main/default/objects/IFv2_RequestExtension3__c/fields/BriefDescription__c.field-meta.xml
<CustomField>
    <fullName>BriefDescription__c</fullName>
    <description>Used in Predefined Workflow</description>
    <label>Brief Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>