force-app/main/default/objects/IFv2_RequestExtension3__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>