force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Control_Plan_Created_Updated__c.field-meta.xml
<CustomField>
    <fullName>Control_Plan_Created_Updated__c</fullName>
    <description>Used in IFE Workflow Process</description>
    <label>Control Plan Created / Updated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>