force-app/main/default/objects/IFv2_RequestExtension3__c/fields/CorporateCardDisclaimer__c.field-meta.xml
<CustomField>
    <fullName>CorporateCardDisclaimer__c</fullName>
    <label>Corporate Card Disclaimer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>I declare for the purposes that I have read and fully agree with the content of the &quot;Corporate Card Responsibility Term&quot;</fullName>
            </value>
            <value>
                <fullName>I have read and do not agree to the &quot;Corporate Card Disclaimer&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>