force-app/main/default/objects/IFv2_RequestExtension3__c/fields/CorporateCardNumber__c.field-meta.xml
<CustomField>
    <fullName>CorporateCardNumber__c</fullName>
    <label>Corporate Card Number:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>