force-app/main/default/objects/IFv2_RequestExtension3__c/fields/CostCenterIncluded__c.field-meta.xml
<CustomField>
    <fullName>CostCenterIncluded__c</fullName>
    <description>Used in NA Entry Application</description>
    <inlineHelpText>Does the entry require a cost center?</inlineHelpText>
    <label>Cost Center included?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>