force-app/main/default/objects/IFv2_RequestExtension3__c/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <label>CPF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>