force-app/main/default/objects/IFv2_RequestExtension3__c/fields/CtaEst__c.field-meta.xml
<CustomField>
    <fullName>CtaEst__c</fullName>
    <label>Cta. est.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>