force-app/main/default/objects/IFv2_RequestExtension3__c/fields/CurrentAccount__c.field-meta.xml
<CustomField>
    <fullName>CurrentAccount__c</fullName>
    <label>Current Account:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>