force-app/main/default/objects/IFv2_RequestExtension3__c/fields/DateofBirth__c.field-meta.xml
<CustomField>
    <fullName>DateofBirth__c</fullName>
    <label>Date of Birth:</label>
    <type>Date</type>
</CustomField>