force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Digit__c.field-meta.xml
<CustomField>
    <fullName>Digit__c</fullName>
    <description>Used in Request for Corporate Card</description>
    <inlineHelpText>**Para banco Bradesco, obrigatório informar o digito.</inlineHelpText>
    <label>Digit:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>