force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Used in Journal NA Entry Application</description>
    <inlineHelpText>Please choose the Division</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SGMX</fullName>
            </value>
            <value>
                <fullName>SGUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>