force-app/main/default/objects/IFv2_RequestExtension3__c/fields/EDV__c.field-meta.xml
<CustomField>
    <fullName>EDV__c</fullName>
    <label>EDV:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>