force-app/main/default/objects/IFv2_RequestExtension3__c/fields/EspCto__c.field-meta.xml
<CustomField>
    <fullName>EspCto__c</fullName>
    <label>Esp. cto.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>