force-app/main/default/objects/IFv2_RequestExtension3__c/fields/EWAKRAC__c.field-meta.xml
<CustomField>
    <fullName>EWAKRAC__c</fullName>
    <label>EWAK/RAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>