force-app/main/default/objects/IFv2_RequestExtension3__c/fields/ExperienceOrderValidation__c.field-meta.xml
<CustomField>
    <fullName>ExperienceOrderValidation__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Experience Order Validation</label>
    <type>Date</type>
</CustomField>