force-app/main/default/objects/IFv2_RequestExtension3__c/fields/GRRS__c.field-meta.xml
<CustomField>
    <fullName>GRRS__c</fullName>
    <label>GR. RS.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nenhum</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>38</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>