force-app/main/default/objects/IFv2_RequestExtension3__c/fields/I_have_tried_my_suggestion__c.field-meta.xml
<CustomField>
    <fullName>I_have_tried_my_suggestion__c</fullName>
    <description>used in workflow employee suggestion scheme MX US</description>
    <inlineHelpText>Please enter, if you have already tried this suggestion</inlineHelpText>
    <label>I have tried my suggestion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>