force-app/main/default/objects/IFv2_RequestExtension3__c/fields/IFv2_Area__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Area__c</fullName>
    <label>Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>