force-app/main/default/objects/IFv2_RequestExtension3__c/fields/IFv2_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>000068D000</fullName>
            </value>
            <value>
                <fullName>000068D001</fullName>
            </value>
            <value>
                <fullName>000068D002</fullName>
            </value>
            <value>
                <fullName>000068D003</fullName>
            </value>
            <value>
                <fullName>000068D100</fullName>
            </value>
            <value>
                <fullName>000068D101</fullName>
            </value>
            <value>
                <fullName>000068D102</fullName>
            </value>
            <value>
                <fullName>000068D104</fullName>
            </value>
            <value>
                <fullName>000068D105</fullName>
            </value>
            <value>
                <fullName>000068D106</fullName>
            </value>
            <value>
                <fullName>000068D107</fullName>
            </value>
            <value>
                <fullName>000068D108</fullName>
            </value>
            <value>
                <fullName>000068D160</fullName>
            </value>
            <value>
                <fullName>000068D161</fullName>
            </value>
            <value>
                <fullName>000068D162</fullName>
            </value>
            <value>
                <fullName>000068D163</fullName>
            </value>
            <value>
                <fullName>000068D164</fullName>
            </value>
            <value>
                <fullName>000068D199</fullName>
            </value>
            <value>
                <fullName>000068D200</fullName>
            </value>
            <value>
                <fullName>000068D231</fullName>
            </value>
            <value>
                <fullName>000068D232</fullName>
            </value>
            <value>
                <fullName>000068D233</fullName>
            </value>
            <value>
                <fullName>000068D249</fullName>
            </value>
            <value>
                <fullName>000068D250</fullName>
            </value>
            <value>
                <fullName>000068D251</fullName>
            </value>
            <value>
                <fullName>000068D252</fullName>
            </value>
            <value>
                <fullName>000068D253</fullName>
            </value>
            <value>
                <fullName>000068D254</fullName>
            </value>
            <value>
                <fullName>000068D255</fullName>
            </value>
            <value>
                <fullName>000068D257</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>