force-app/main/default/objects/IFv2_RequestExtension3__c/fields/IFv2_Cost_Center_Reallocation__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Cost_Center_Reallocation__c</fullName>
    <label>Cost Center Reallocation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>000068D003</fullName>
            </value>
            <value>
                <fullName>000068D200</fullName>
            </value>
            <value>
                <fullName>000068D105</fullName>
            </value>
            <value>
                <fullName>000068D101</fullName>
            </value>
            <value>
                <fullName>000068D161</fullName>
            </value>
            <value>
                <fullName>000068D001</fullName>
            </value>
            <value>
                <fullName>000068D002</fullName>
            </value>
            <value>
                <fullName>000068D000</fullName>
            </value>
            <value>
                <fullName>000068D108</fullName>
            </value>
            <value>
                <fullName>000068D232</fullName>
            </value>
            <value>
                <fullName>000068D250</fullName>
            </value>
            <value>
                <fullName>000068D107</fullName>
            </value>
            <value>
                <fullName>000068D252</fullName>
            </value>
            <value>
                <fullName>000068D251</fullName>
            </value>
            <value>
                <fullName>000068D254</fullName>
            </value>
            <value>
                <fullName>000068D102</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>