force-app/main/default/objects/IFv2_RequestExtension3__c/fields/IFv2_CW__c.field-meta.xml
<CustomField>
    <fullName>IFv2_CW__c</fullName>
    <description>Enter calender week number</description>
    <inlineHelpText>Please enter calender week number</inlineHelpText>
    <label>CW</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>