force-app/main/default/objects/IFv2_RequestExtension3__c/fields/IFv2_Reason__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>