force-app/main/default/objects/IFv2_RequestExtension3__c/fields/IFv2_Type_of_Overtime__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Type_of_Overtime__c</fullName>
    <description>used in mexico overtime</description>
    <inlineHelpText>Please select overtime type</inlineHelpText>
    <label>Type of Overtime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Exceeded</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>