force-app/main/default/objects/IFv2_RequestExtension3__c/fields/IssuingBody__c.field-meta.xml
<CustomField>
    <fullName>IssuingBody__c</fullName>
    <label>Issuing Body:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>