force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <defaultValue>&quot;http://www.bosch.de/de/de/our_company_1/business_sectors_and_divisions_1/starter_motors_and_generators_1/starter-motors-and-generators.html&quot;</defaultValue>
    <label>Link</label>
    <type>Url</type>
</CustomField>