force-app/main/default/objects/IFv2_RequestExtension3__c/fields/ManufacturingAccount__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingAccount__c</fullName>
    <description>Used in Order Experience Request</description>
    <label>Manufacturing Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>