force-app/main/default/objects/IFv2_RequestExtension3__c/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>Marital Status:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>