force-app/main/default/objects/IFv2_RequestExtension3__c/fields/MartialStatus__c.field-meta.xml
<CustomField>
    <fullName>MartialStatus__c</fullName>
    <label>Martial Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>