force-app/main/default/objects/IFv2_RequestExtension3__c/fields/MaximumAllowedTime__c.field-meta.xml
<CustomField>
    <fullName>MaximumAllowedTime__c</fullName>
    <inlineHelpText>In Days</inlineHelpText>
    <label>Maximum Allowed Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>