force-app/main/default/objects/IFv2_RequestExtension3__c/fields/MothersName__c.field-meta.xml
<CustomField>
    <fullName>MothersName__c</fullName>
    <label>Mother&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>