force-app/main/default/objects/IFv2_RequestExtension3__c/fields/MSA_and_Capability_Created_Updated__c.field-meta.xml
<CustomField>
    <fullName>MSA_and_Capability_Created_Updated__c</fullName>
    <description>Used in IFE Process Workflow</description>
    <label>MSA and Capability Created / Updated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>