force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Used in Request for corporate Card
Used in Employee Suggestion Scheme US MX</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>