force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Neighbourhood__c.field-meta.xml
<CustomField>
    <fullName>Neighbourhood__c</fullName>
    <label>Neighbourhood:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>