force-app/main/default/objects/IFv2_RequestExtension3__c/fields/NoLtApt__c.field-meta.xml
<CustomField>
    <fullName>NoLtApt__c</fullName>
    <label>No. | Lt. | Apt.:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>