force-app/main/default/objects/IFv2_RequestExtension3__c/fields/NRSPRINC__c.field-meta.xml
<CustomField>
    <fullName>NRSPRINC__c</fullName>
    <label>N.º R.S. PRINC:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>