force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Occurrence__c</fullName>
    <description>Used in NA Entry Application Workflow</description>
    <inlineHelpText>Please enter the occurency: Standard, Recurring, Reversing</inlineHelpText>
    <label>Occurrence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Reversing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>