force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>