force-app/main/default/objects/IFv2_RequestExtension3__c/fields/OfficePhone__c.field-meta.xml
<CustomField>
    <fullName>OfficePhone__c</fullName>
    <label>Office Phone:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>