force-app/main/default/objects/IFv2_RequestExtension3__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <description>Used in Order Experience Workflow</description>
    <label>Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>