force-app/main/default/objects/IFv2_RequestExtension3__c/fields/PNrDesignation__c.field-meta.xml
<CustomField>
    <fullName>PNrDesignation__c</fullName>
    <label>PNr / Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>