force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Present_Method__c.field-meta.xml
<CustomField>
    <fullName>Present_Method__c</fullName>
    <description>used in workflow employee suggestion scheme US MX</description>
    <label>Present Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>