force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Production_Line__c.field-meta.xml
<CustomField>
    <fullName>Production_Line__c</fullName>
    <label>Production Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>