force-app/main/default/objects/IFv2_RequestExtension3__c/fields/ProductionOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductionOrderNumber__c</fullName>
    <label>Production Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>