force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Proposed_Method__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Method__c</fullName>
    <description>used in workflow employee suggestion scheme US MX</description>
    <inlineHelpText>Please enter your proposed method.</inlineHelpText>
    <label>Proposed Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>