force-app/main/default/objects/IFv2_RequestExtension3__c/fields/QtdCommissioned__c.field-meta.xml
<CustomField>
    <fullName>QtdCommissioned__c</fullName>
    <label>Qtd. Commissioned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>