force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Reasonforcancellation__c.field-meta.xml
<CustomField>
    <fullName>Reasonforcancellation__c</fullName>
    <label>Reason for cancellation:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roubo</fullName>
            </value>
            <value>
                <fullName>Clonagem</fullName>
            </value>
            <value>
                <fullName>Perda</fullName>
            </value>
            <value>
                <fullName>Desinteresse</fullName>
            </value>
            <value>
                <fullName>Desligamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>