force-app/main/default/objects/IFv2_RequestExtension3__c/fields/ReasonforChange__c.field-meta.xml
<CustomField>
    <fullName>ReasonforChange__c</fullName>
    <label>Reason for Change:</label>
    <type>TextArea</type>
</CustomField>