force-app/main/default/objects/IFv2_RequestExtension3__c/fields/ReasonForOrder__c.field-meta.xml
<CustomField>
    <fullName>ReasonForOrder__c</fullName>
    <label>Reason for Order</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>