force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Reasonforreissue__c.field-meta.xml
<CustomField>
    <fullName>Reasonforreissue__c</fullName>
    <label>Reason for reissue:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tarja Magnética</fullName>
            </value>
            <value>
                <fullName>Quebra do Cartao</fullName>
            </value>
            <value>
                <fullName>Roubo</fullName>
            </value>
            <value>
                <fullName>Clonagem</fullName>
            </value>
            <value>
                <fullName>Perda</fullName>
            </value>
            <value>
                <fullName>Numeracao Comprometida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>