force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Reasonforunlock__c.field-meta.xml
<CustomField>
    <fullName>Reasonforunlock__c</fullName>
    <label>Reason for unlock:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carta Novo</fullName>
            </value>
            <value>
                <fullName>Renovacao</fullName>
            </value>
            <value>
                <fullName>Cartao sem utilizacao por 3 meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>