force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>This Field is used in Order Experience workflow.</description>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>