force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Remarks_ControlPlan__c.field-meta.xml
<CustomField>
    <fullName>Remarks_ControlPlan__c</fullName>
    <description>Used in IFE Approval Workflow - Control_Plan_Created_Updated</description>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>