force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Remarks_MSA__c.field-meta.xml
<CustomField>
    <fullName>Remarks_MSA__c</fullName>
    <description>Used in IFE Process Workflow - MSA_and_Capability_Created_Updated</description>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>