force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Remarks_PFMEA__c.field-meta.xml
<CustomField>
    <fullName>Remarks_PFMEA__c</fullName>
    <description>Used in IFE Approval Process - PFMEA_Created_Updated</description>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>