force-app/main/default/objects/IFv2_RequestExtension3__c/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <label>RG:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>