force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <label>Sex:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>