force-app/main/default/objects/IFv2_RequestExtension3__c/fields/SpecifyOther__c.field-meta.xml
<CustomField>
    <fullName>SpecifyOther__c</fullName>
    <label>Specify Other:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>