force-app/main/default/objects/IFv2_RequestExtension3__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>