force-app/main/default/objects/IFv2_RequestExtension3__c/fields/SuggestedBy__c.field-meta.xml
<CustomField>
    <fullName>SuggestedBy__c</fullName>
    <label>Suggested By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>