force-app/main/default/objects/IFv2_RequestExtension3__c/fields/Temporarylimituntil__c.field-meta.xml
<CustomField>
    <fullName>Temporarylimituntil__c</fullName>
    <label>Temporary limit until</label>
    <type>Date</type>
</CustomField>