force-app/main/default/objects/IFv2_RequestExtension3__c/fields/This_suggestion_can_be_implemented_by_me__c.field-meta.xml
<CustomField>
    <fullName>This_suggestion_can_be_implemented_by_me__c</fullName>
    <description>used in workflow employee suggestion scheme US MX</description>
    <inlineHelpText>Please decide, if you are able to implement this suggestion</inlineHelpText>
    <label>This suggestion can be implemented by me</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>