force-app/main/default/objects/IFv2_RequestExtension3__c/fields/TotalCardLimitinUS__c.field-meta.xml
<CustomField>
    <fullName>TotalCardLimitinUS__c</fullName>
    <inlineHelpText>*** This amount must include the amount of the PURCHASE together with the amount of PURCHASE.</inlineHelpText>
    <label>Total Card Limit in US $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>